feat: OAS studio updateSource - support updating the overlay which will re run the source (#830)
