# internal/run/studio/generated-studio-sdk/models/components/security.go
@@ -1,0 +1,14 @@
+// Code generated by Speakeasy (https://speakeasyapi.dev). DO NOT EDIT.
+
+package components
+
+type Security struct {
+	Secret string `security:"scheme,type=apiKey,subtype=header,name=x-secret-key"`
+}
+
+func (o *Security) GetSecret() string {
+	if o == nil {
+		return ""
+	}
+	return o.Secret
+}
